Updated Alert config with UH email

--- a/config/alert-config.json
+++ b/config/alert-config.json
@@ -7,8 +7,8 @@
             "secretKey": ""
         },
         "region": "us-east-1",
-        "fromAddress": "rlc.support@relevancelab.com",
-        "toAddress": ["rlc.support@relevancelab.com"],
+        "fromAddress": "AWS-SREsupport-donotreply@med.miami.edu",
+        "toAddress": ["AWS-SREsupport-donotreply@med.miami.edu"],
         "ccAddress": []
     }
 }
