Updated Project on board files

--- a/Rgproject-onboarding/PROD/snstopic.yaml
+++ b/Rgproject-onboarding/PROD/snstopic.yaml
@@ -24,7 +24,7 @@ Resources:
         - Key: Environment
           Value: PROD
         - Key: ApplicationName
-          Value: ResearchGatewayProd
+          Value: ResearchGatewayPROD
         - Key: Department
           Value: DataScience
         - Key: ApplicationCustodian
