--- a/Rgproject-onboarding/QA/lambda-deployment.yaml
+++ b/Rgproject-onboarding/QA/lambda-deployment.yaml
@@ -83,10 +83,10 @@ Resources:
       AuthType: AWS_IAM
 Outputs:
   LambdaFunctionArn:
-    Description: ARN of the Lambda function
+    Description: egressStoreLambdaARN 
     Value: !GetAtt LambdaFunction.Arn
     Export:
       Name: LambdaFunctionArn
   FunctionUrl:
-    Description: Lambda Function Url
+    Description: egressStoreLambdaURL 
     Value: !GetAtt LambdaFunctionUrl.FunctionUrl
