Resource script updated

--- a/Rgproject-onboarding/QA/egressresources.yml
+++ b/Rgproject-onboarding/QA/egressresources.yml
@@ -7,6 +7,10 @@
 
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Provision all the required resources for TRE Egress application setup in RG.
+Parameters:
+  RGDomain:
+    Type: String
+    Description: RG Domain that will access the Egress Store
 Resources:
   EgressAccessLogsBucketKMSKey:
     Type: AWS::KMS::Key
@@ -146,6 +150,15 @@ Resources:
         LogFilePrefix: egressStore/
       VersioningConfiguration:
         Status: Enabled
+      CorsConfiguration:
+        CorsRules:
+          - AllowedOrigins:
+              - !Ref RGDomain 
+            AllowedMethods:
+              - POST
+            ExposedHeaders:
+              - ETag
+
       PublicAccessBlockConfiguration: # Block all public access configuration for the S3 bucket
         BlockPublicAcls: true
         BlockPublicPolicy: true
